link AUDIO_LIBS

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -194,7 +194,8 @@ endif
 stepmania_LDADD = \
 		  $(GL_LIBS) \
 		  $(libSDL) \
-		  $(SDL_LIBS) -lSDL_image
+		  $(SDL_LIBS) -lSDL_image \
+		  $(AUDIO_LIBS)
 
 INCLUDES = $(SDL_CFLAGS)
 # -O0 -g
