ScreenSelect metrics cleanup

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -80,7 +80,12 @@ BounceJoinMessage=1
 FoldOnJoin=1
 
 [ScreenSelectStyle]
-Choices=single,versus,couple,double,solo
+NumChoices=5
+Choice1=Style,single
+Choice2=Style,versus
+Choice3=Style,couple
+Choice4=Style,double
+Choice5=Style,solo
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
 NextScreen1=ScreenSelectDifficulty
@@ -221,7 +226,15 @@ NextScreen=ScreenSelectGroup
 HelpText=
 
 [ScreenSelectDifficulty]
-Choices=arcade-beginner,arcade-easy,arcade-medium,arcade-hard,nonstop,oni,endless,rave
+NumChoices=8
+Choice1=PlayMode,arcade;Difficulty,beginner
+Choice2=PlayMode,arcade;Difficulty,easy
+Choice3=PlayMode,arcade;Difficulty,medium
+Choice4=PlayMode,arcade;Difficulty,hard
+Choice5=PlayMode,nonstop
+Choice6=PlayMode,oni
+Choice7=PlayMode,endless
+Choice8=PlayMode,rave
 NumChoicesOnPage1=4
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
