--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1823,7 +1823,11 @@ HoldNotes=Right,Left,Down,Up
 Dark=
 CancelAll=Left,Right,Left,Right,Left,Right,Left,Right
 NextTheme=Left,Left,Left,Right,Right,Right,Left,Right
+NextTheme2=MenuLeft,MenuLeft,MenuLeft,MenuRight,MenuRight,MenuRight,MenuLeft,MenuRight
 NextAnnouncer=Left,Left,Right,Right,Left,Left,Right,Right
+NextAnnouncer2=MenuLeft,MenuLeft,MenuRight,MenuRight,MenuLeft,MenuLeft,MenuRight,MenuRight
+NextGame=Left,Right,Left,Left,Right,Right,Left,Right
+NextGame2=MenuLeft,MenuRight,MenuLeft,MenuLeft,MenuRight,MenuRight,MenuLeft,MenuRight
 NextBannerGroup=MenuUp,MenuRight,MenuRight
 NextBannerGroup2=MenuUp,MenuDown,MenuUp,MenuDown
 Hidden=
