--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2162,6 +2162,7 @@ TextColor5=1.0,1,1.0,1
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
+ResamplingQuality=Advanced: Select the resampling quality to use.
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
