--- a/stepmania/Themes/default/Fonts/_japanese 24px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 24px.ini
@@ -26,12 +26,13 @@ LineSpacing=28
 DefaultWidth=28
 
 line 0=一二三四五六七八
-line 1=九十本語＆（）
-line 2=革命祭桜小坂鬼道
-line 3=弐神様民謡明日蒼
-line 4=衝動猫毛亜熱帯爆
-line 5=弾新谷大見解魔法
-line 6=扉夜空才遅伝説真
+line 1=九十本語＆（）？
+line 2=！
+line 3=革命祭桜小坂鬼道
+line 4=弐神様民謡明日蒼
+line 5=衝動猫毛亜熱帯爆
+line 6=弾新谷大見解魔法
+line 7=扉夜空才遅伝説真
 
 [kanji 2]
 Top=5
