Set asset names; this fixes the announcer.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -81,11 +81,12 @@ FoldOnJoin=1
 
 [ScreenSelectStyle]
 NumChoices=5
-Choice1=Style,single
-Choice2=Style,versus
-Choice3=Style,couple
-Choice4=Style,double
-Choice5=Style,solo
+# The "name" here affects the announcer, eg. "ScreenSelectStyle comment single".
+Choice1=Style,single;name,single
+Choice2=Style,versus;name,versus
+Choice3=Style,couple;name,couple
+Choice4=Style,double;name,double
+Choice5=Style,solo;name,solo
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
 NextScreen1=ScreenSelectDifficulty
@@ -227,14 +228,14 @@ HelpText=
 
 [ScreenSelectDifficulty]
 NumChoices=8
-Choice1=PlayMode,arcade;Difficulty,beginner
-Choice2=PlayMode,arcade;Difficulty,easy
-Choice3=PlayMode,arcade;Difficulty,medium
-Choice4=PlayMode,arcade;Difficulty,hard
-Choice5=PlayMode,nonstop
-Choice6=PlayMode,oni
-Choice7=PlayMode,endless
-Choice8=PlayMode,rave
+Choice1=PlayMode,arcade;Difficulty,beginner;name,beginner
+Choice2=PlayMode,arcade;Difficulty,easy;name,easy
+Choice3=PlayMode,arcade;Difficulty,medium;name,medium
+Choice4=PlayMode,arcade;Difficulty,hard;name,hard
+Choice5=PlayMode,nonstop;name,nonstop
+Choice6=PlayMode,oni;name,oni
+Choice7=PlayMode,endless;name,endless
+Choice8=PlayMode,rave;name,rave
 NumChoicesOnPage1=4
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
