Make ScreenTitleMenu a ScreenSelect.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -35,6 +35,27 @@ CurrentModeY=0
 CurrentModeZoom=1
 
 [ScreenTitleMenu]
+# Note that we don't use the "name" parameter to Choices here.  Name1 is
+# the displayed text, which might be translated or otherwise changed.  The "name,foo"
+# parameter to ModeChoices is an asset name, which is used in filenames.
+NumChoices=8
+Choice1=screen,ScreenCaution
+Name1=GAME START
+Choice2=screen,ScreenSelectGame
+Name2=SELECT GAME
+Choice3=screen,ScreenOptionsMenu
+Name3=OPTIONS
+Choice4=screen,ScreenEditMenu
+Name4=EDIT/SYNC SONGS
+Choice5=screen,ScreenEditCoursesMenu
+Name5=EDIT COURSES
+Choice6=screen,ScreenJukeboxMenu
+Name6=JUKEBOX
+Choice7=screen,ScreenExit
+Name7=EXIT
+Choice8=screen,ScreenTest
+Name8=SANDBOX
+TimerSeconds=-1 // none
 LogoHomeOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 LogoOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 VersionOnCommand=horizalign,right;x,620;y,20;diffuse,0.6,0.6,0.6,1;zoom,0.5;shadowlength,2
@@ -54,11 +75,11 @@ MenuCommandOnCreate=diffusealpha,0;sleep,0.1;linear,0.5;diffusealpha,1;
 MenuCommandSelectDelay=0.5
 SecondsBetweenComments=12
 SecondsBeforeAttract=30
+HelpText=
 HelpTextHome=Use &UP; &DOWN; to select, then press START
 HelpTextPay=Press START to begin
 HelpTextFree=Press START to begin
 HelpTextEvent=Press START to begin
-NextScreen=ScreenCaution
 
 [ScreenCaution]
 NextScreen=ScreenSelectStyle
