Hide the sandbox

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -38,7 +38,7 @@ CurrentModeZoom=1
 # Note that we don't use the "name" parameter to Choices here.  Name1 is
 # the displayed text, which might be translated or otherwise changed.  The "name,foo"
 # parameter to ModeChoices is an asset name, which is used in filenames.
-NumChoices=8
+NumChoices=7 // no SANDBOX
 Choice1=screen,ScreenCaution
 Name1=GAME START
 Choice2=screen,ScreenSelectGame
