Give screens individual control over whether the style icon is displayed.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -56,6 +56,7 @@ Name7=EXIT
 Choice8=screen,ScreenTest
 Name8=SANDBOX
 TimerSeconds=-1 // none
+StyleIcon=0
 LogoHomeOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 LogoOnCommand=x,320;y,240;zoomy,0;sleep,0.5;bounceend,0.5;zoomy,1;glowshift;effectperiod,2.5;effectcolor1,1,1,1,0.1;effectcolor2,1,1,1,0.3
 VersionOnCommand=horizalign,right;x,620;y,20;diffuse,0.6,0.6,0.6,1;zoom,0.5;shadowlength,2
@@ -95,6 +96,7 @@ JoinMessageP2X=520
 JoinMessageP2Y=336
 HelpText=Press &DOWN; on the pad to join
 TimerSeconds=40
+StyleIcon=1
 NextScreen=ScreenSelectGroup
 SilentWait=1
 BounceJoinMessage=1
@@ -110,6 +112,7 @@ Choice4=Style,double;name,double
 Choice5=Style,solo;name,solo
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
+StyleIcon=1
 NextScreen1=ScreenSelectDifficulty
 NextScreen2=ScreenSelectDifficulty
 NextScreen3=ScreenSelectDifficulty
@@ -178,6 +181,7 @@ PictureOffCommand=linear,0.5;diffusealpha,0;glow,1,1,1,0
 [ScreenSelectStyle5th]
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
+StyleIcon=1
 NextScreen=ScreenSelectDifficulty
 PadX1=70
 PadY1=300
@@ -230,6 +234,7 @@ GuideX=320
 GuideY=374
 HelpText=Press &DOWN; on the pad to join.  Press &LEFT; &RIGHT; to change styles, then press START
 TimerSeconds=30
+StyleIcon=1
 NextScreen=ScreenSelectGroup
 ScrollingListX=320
 ScrollingListY=250
@@ -260,6 +265,7 @@ Choice8=PlayMode,rave;name,rave
 NumChoicesOnPage1=4
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
+StyleIcon=1
 NextScreen1=ScreenSelectGroup
 NextScreen2=ScreenSelectGroup
 NextScreen3=ScreenSelectGroup
@@ -480,6 +486,7 @@ PictureYP2=245
 SleepAfterChoiceSeconds=0.3
 SleepAfterTweenOffSeconds=0.8
 TimerSeconds=60
+StyleIcon=1
 
 
 [ScreenSelectGroup]
@@ -516,6 +523,7 @@ MusicListOffCommand=
 SleepAfterTweenOffSeconds=0.8
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 TimerSeconds=40
+StyleIcon=1
 NextScreen=ScreenInstructions
 
 [GroupList]
@@ -551,6 +559,7 @@ NextScreenBattle=ScreenSelectCharacter
 NextScreenRave=ScreenSelectCharacter
 HelpText=Press START to continue
 TimerSeconds=15
+StyleIcon=1
 
 [ScreenSelectMusic]
 DefaultSort=GROUP
@@ -686,6 +695,7 @@ CourseContentsX=160
 CourseContentsY=336
 HelpText=&LEFT; or &RIGHT; change music     Hold &LEFT; and &RIGHT; then press START to change sort::&UP;&UP; easier difficulty     &DOWN;&DOWN; harder difficulty::&UP;&DOWN;&UP;&DOWN; to change sort
 TimerSeconds=60
+StyleIcon=1
 SampleMusicDelay=0.25
 PrevScreenArcade=ScreenTitleMenu
 PrevScreenNonstop=ScreenTitleMenu
@@ -775,6 +785,8 @@ NextOptionsScreenOni=ScreenPlayerOptions
 NextOptionsScreenEndless=ScreenPlayerOptions
 NextOptionsScreenBattle=ScreenPlayerOptions
 NextOptionsScreenRave=ScreenRaveOptions
+TimerSeconds=60
+StyleIcon=0
 
 [ScreenSelectCourse]
 ExplanationX=132
@@ -800,6 +812,7 @@ ScoreP2Y=286
 ScoreZoom=0.8
 HelpText=Use &LEFT; &RIGHT; to select, then press START::&UP;&UP; easier difficulty     &DOWN;&DOWN; harder difficulty
 TimerSeconds=60
+StyleIcon=1
 
 [ScreenStage]
 NextScreen=ScreenGameplay
@@ -1395,6 +1408,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 HelpText=Press START to continue
 TimerSeconds=15
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1426,6 +1440,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 HelpText=Press START to continue
 TimerSeconds=30
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1457,6 +1472,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 HelpText=Press START to continue
 TimerSeconds=30
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1488,6 +1504,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 HelpText=Press START to continue
 TimerSeconds=30
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1519,6 +1536,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 HelpText=Press START to continue
 TimerSeconds=30
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1550,6 +1568,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 HelpText=Press START to continue
 TimerSeconds=15
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1581,6 +1600,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 HelpText=Press START to continue
 TimerSeconds=15
+StyleIcon=1
 JudgeSoundTimeMarvelous=-1
 JudgeSoundTimePerfect=-1
 JudgeSoundTimeGreat=-1
@@ -1722,6 +1742,7 @@ EvenLineIn=addx,-640;decelerate,0.5;addx,640;
 OddLineIn=addx,640;decelerate,0.5;addx,-640;
 EvenLineOut=stoptweening;accelerate,0.3;addx,-640;
 OddLineOut=stoptweening;accelerate,0.3;addx,640;
+StyleIcon=0
 
 [HoldGhostArrow]
 WarmUpSeconds=0.25
@@ -1924,6 +1945,7 @@ AttackDurationSeconds=10
 
 [ScreenSelectMaster]
 TimerSeconds=20
+StyleIcon=1
 
 [ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1934,6 +1956,7 @@ AutoPlay=This option is useful for those who would like to play::without using a
 BackDelayed=Turning this option ON will require that you hold the Back button::for 0.5 seconds before it will regiser.  This is useful if you find::yourself accidentally pressing the Back button on your controller.
 OptionsNavigation=When using &oq;SM style&cq;, the Start button will take::you to the next screen and Up/Down will switch option lines.::When using &oq;Arcade style&cq;, the Start button will move the cursor::to the next line and Up/Down will be ignored.
 WheelSpeed=Adjusts the speed of the DDR style music wheel.
+StyleIcon=0
 
 [ScreenMachineOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1950,6 +1973,7 @@ CoinMode=When set to HOME, options will be shown on the title screen.::When set 
 CoinsPerCredit=The number of coins that must be inserted before a player can join.
 JointPremium=When set to OFF, game styles that require both sides of the machine::will cost 2 credits.  When set to ON game styles that require both sides::of the machine will cost only 1 credit. 
 SongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
+StyleIcon=0
 
 [ScreenGraphicOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1963,6 +1987,7 @@ MovieDecode=When a movie texture is being used, StepMania will spend this much t
 WaitForVsync=Wait for the monitor's vertical retrace before displaying::the next frame.  This option only has an effect when the::Display Mode is set to &oq;full screen&cq;.  Turning this option off will not::cap your frame rate to the refresh rate, but may result in &oq;tearing&cq;.
 KeepTexturesInMemory=Set to ON hold textures in memory instead of::freeing them.  This will eliminate the time needed to load::the texture next from disk next time this is needed.  Do not set to ON::unless you have 128MB of memory or more.
 ShowStats=Display Performance Statistics in the upper right corner::of the screen.  FPS = frames per second.::TPF = triangles per frame.  DPF = draws per frame.
+StyleIcon=0
 
 [ScreenGameplayOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1972,6 +1997,7 @@ HiddenSongs=Some songs are only playable during Oni courses and::with roulette. 
 PickExtraStage=Instead of a set extra stage, this allows::the player to choose which song to play.::Difficulty and options are still locked.
 SoloSingles=Turn this option &oq;ON&cq; to enable Solo-Style::for 4-panel single play.
 UnlockSystem=Enable or disable unlock system.
+StyleIcon=0
 
 [ScreenBackgroundOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1981,6 +2007,7 @@ Danger=Turn this option &oq;OFF&cq; to disable the flashing &oq;Danger&cq;::back
 DancingCharacters=Turn this option &oq;OFF&cq; to disable the dancing characters::in the background.  Even if this option is &oq;ON&cq;,::characters will only show if you have some installed.
 ShowBeginnerHelper=Turn this on to enable a demonstration dancer during Beginner play.
 RandomBackgrounds=Choose the maximum number of random backgrounds to be loaded simultaneously.
+StyleIcon=0
 
 [ScreenAppearanceOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1998,11 +2025,13 @@ Lyrics=Choose whether to show lyrics if a song::has them available (LRC File)
 10+footInRed=Choose where 10 footers or higher are displayed::in red on the song select wheel.
 CourseSort=Determines how courses are sorted.
 RandomAtEnd=Determines if courses with random songs should be placed at the end::of the course select wheel.
+StyleIcon=0
 
 [ScreenAutogenOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutogenMissingTypes=Show steps for songs that were created by Autogen.
 AutogenGroupCourses=Show group Nonstop and Endless courses that::were created by Autogen.
+StyleIcon=0
 
 [ScreenProfileOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2011,6 +2040,7 @@ Player2Profile=
 CreateNew=
 Delete=
 Rename=
+StyleIcon=0
 
 [ScreenUnlock]
 UseUnlocksDat=1
@@ -2185,6 +2215,7 @@ HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::
 MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
 ResamplingQuality=Advanced: Select the resampling quality to use.
+StyleIcon=0
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
@@ -2239,6 +2270,7 @@ NumCharsToDrawBehind=2
 NumCharsToDrawTotal=10
 FakeBeatsPerSec=2.5
 TimerSeconds=24
+StyleIcon=1
 
 [EditMenu]
 Arrows1X=190
@@ -2330,6 +2362,7 @@ AutogenOptions=
 BackgroundOptions=
 ProfileOptions=
 ReloadSongs/Courses=
+StyleIcon=0
 
 [TextBanner]
 Width=180
@@ -2388,11 +2421,13 @@ NextScreenBattle=ScreenSongOptions
 NextScreenRave=ScreenSongOptions
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options   START to accept changes
 TimerSeconds=30
+StyleIcon=1
 Beginner=BEGINNER
 Easy=LIGHT
 Medium=STANDARD
 Hard=HEAVY
 Challenge=CHALLENGE
+StyleIcon=0
 
 [ScreenRaveOptions]
 PrevScreenArcade=	// should never get here
@@ -2409,6 +2444,7 @@ NextScreenBattle=	// should never get here
 NextScreenRave=ScreenStage
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options   START to accept changes
 TimerSeconds=30
+StyleIcon=0
 
 [ScreenSongOptions]
 PrevScreenArcade=ScreenPlayerOptions
@@ -2426,6 +2462,7 @@ NextScreenRave=ScreenStage
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options   START to accept changes
 Game=Change the current game type with this option.
 TimerSeconds=30
+StyleIcon=0
 
 [ScreenCredits]
 BackgroundsBaseX=160
@@ -2493,6 +2530,7 @@ IconsP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
 HelpText=Use &LEFT; &RIGHT; to select, then press START
 SleepAfterTweenOffSeconds=0.8
 TimerSeconds=40
+StyleIcon=1
 PrevScreenArcade=ScreenTitleMenu
 PrevScreenNonstop=ScreenTitleMenu
 PrevScreenOni=ScreenTitleMenu
