--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1622,18 +1622,21 @@ ExplanationX=320
 ExplanationY=410
 ExplanationText=In this mode, you can edit existing notes patterns,::create note patterns, or synchronize notes with the music.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value    START to continue
+StyleIcon=0
 
 [ScreenJukeboxMenu]
 ExplanationX=320
 ExplanationY=410
 ExplanationText=In this mode, you can watch demos and listen to music.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value    START to continue
+StyleIcon=0
 
 [ScreenEditCoursesMenu]
 ExplanationX=320
 ExplanationY=410
 ExplanationText=In this mode, you can edit courses.::For lines marked with "START", press the START button::to accept the action or open a sub-menu.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value
+StyleIcon=0
 
 [ScreenSystemLayer]
 StatsX=632
@@ -2405,6 +2408,7 @@ IconOffCommand=stoptweening;linear,0.1;diffusealpha,0
 [ScreenSelectGame]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 Game=Change the current game type with this option.
+StyleIcon=0
 
 [ScreenPlayerOptions]
 PrevScreenArcade=ScreenSelectMusic
