add null metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -787,6 +787,7 @@ NextOptionsScreenBattle=ScreenPlayerOptions
 NextOptionsScreenRave=ScreenRaveOptions
 TimerSeconds=60
 StyleIcon=0
+HelpText=
 
 [ScreenSelectCourse]
 ExplanationX=132
