--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -251,6 +251,7 @@ UseModeSpecificBGAnims=0
 [ScreenStyleSplash]
 NextScreen=ScreenSelectGroup
 HelpText=
+StyleIcon=0
 
 [ScreenSelectDifficulty]
 NumChoices=8
