Give screens individual control over whether the timer is displayed and used.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -252,6 +252,7 @@ UseModeSpecificBGAnims=0
 NextScreen=ScreenSelectGroup
 HelpText=
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenSelectDifficulty]
 NumChoices=8
@@ -1625,6 +1626,7 @@ ExplanationY=410
 ExplanationText=In this mode, you can edit existing notes patterns,::create note patterns, or synchronize notes with the music.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value    START to continue
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenJukeboxMenu]
 ExplanationX=320
@@ -1632,6 +1634,7 @@ ExplanationY=410
 ExplanationText=In this mode, you can watch demos and listen to music.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value    START to continue
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenEditCoursesMenu]
 ExplanationX=320
@@ -1639,6 +1642,7 @@ ExplanationY=410
 ExplanationText=In this mode, you can edit courses.::For lines marked with "START", press the START button::to accept the action or open a sub-menu.
 HelpText=&UP; &DOWN; change line     &LEFT; &RIGHT; change value
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenSystemLayer]
 StatsX=632
@@ -1748,6 +1752,7 @@ OddLineIn=addx,640;decelerate,0.5;addx,-640;
 EvenLineOut=stoptweening;accelerate,0.3;addx,-640;
 OddLineOut=stoptweening;accelerate,0.3;addx,640;
 StyleIcon=0
+TimerSeconds=0
 
 [HoldGhostArrow]
 WarmUpSeconds=0.25
@@ -1962,6 +1967,7 @@ BackDelayed=Turning this option ON will require that you hold the Back button::f
 OptionsNavigation=When using &oq;SM style&cq;, the Start button will take::you to the next screen and Up/Down will switch option lines.::When using &oq;Arcade style&cq;, the Start button will move the cursor::to the next line and Up/Down will be ignored.
 WheelSpeed=Adjusts the speed of the DDR style music wheel.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenMachineOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1979,6 +1985,7 @@ CoinsPerCredit=The number of coins that must be inserted before a player can joi
 JointPremium=When set to OFF, game styles that require both sides of the machine::will cost 2 credits.  When set to ON game styles that require both sides::of the machine will cost only 1 credit. 
 SongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenGraphicOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -1993,6 +2000,7 @@ WaitForVsync=Wait for the monitor's vertical retrace before displaying::the next
 KeepTexturesInMemory=Set to ON hold textures in memory instead of::freeing them.  This will eliminate the time needed to load::the texture next from disk next time this is needed.  Do not set to ON::unless you have 128MB of memory or more.
 ShowStats=Display Performance Statistics in the upper right corner::of the screen.  FPS = frames per second.::TPF = triangles per frame.  DPF = draws per frame.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenGameplayOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2003,6 +2011,7 @@ PickExtraStage=Instead of a set extra stage, this allows::the player to choose w
 SoloSingles=Turn this option &oq;ON&cq; to enable Solo-Style::for 4-panel single play.
 UnlockSystem=Enable or disable unlock system.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenBackgroundOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2013,6 +2022,7 @@ DancingCharacters=Turn this option &oq;OFF&cq; to disable the dancing characters
 ShowBeginnerHelper=Turn this on to enable a demonstration dancer during Beginner play.
 RandomBackgrounds=Choose the maximum number of random backgrounds to be loaded simultaneously.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenAppearanceOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2031,12 +2041,14 @@ Lyrics=Choose whether to show lyrics if a song::has them available (LRC File)
 CourseSort=Determines how courses are sorted.
 RandomAtEnd=Determines if courses with random songs should be placed at the end::of the course select wheel.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenAutogenOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutogenMissingTypes=Show steps for songs that were created by Autogen.
 AutogenGroupCourses=Show group Nonstop and Endless courses that::were created by Autogen.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenProfileOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2046,6 +2058,7 @@ CreateNew=
 Delete=
 Rename=
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenUnlock]
 UseUnlocksDat=1
@@ -2221,6 +2234,7 @@ MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
 ResamplingQuality=Advanced: Select the resampling quality to use.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
@@ -2368,6 +2382,7 @@ BackgroundOptions=
 ProfileOptions=
 ReloadSongs/Courses=
 StyleIcon=0
+TimerSeconds=0
 
 [TextBanner]
 Width=180
@@ -2411,6 +2426,7 @@ IconOffCommand=stoptweening;linear,0.1;diffusealpha,0
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 Game=Change the current game type with this option.
 StyleIcon=0
+TimerSeconds=0
 
 [ScreenPlayerOptions]
 PrevScreenArcade=ScreenSelectMusic
